apps/network_policies_tests/network_policies.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mysql
spec:
  podSelector:
    matchLabels:
      app: wordpress
      tier: mysql
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress
          tier: frontend
    ports:
    - port: 3306
      protocol: TCP
  egress:
  - to:
    - ipBlock:
        cidr: 169.254.25.10/32
    ports:
    - protocol: UDP
      port: 53

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: wordpress
spec:
  podSelector:
    matchLabels:
      app: wordpress
      tier: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 80
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: wordpress
          tier: mysql
    ports:
    - port: 3306
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 169.254.25.10/32
    ports:
    - protocol: UDP
      port: 53
